--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -6,5 +6,6 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-serde = "1.0.151"
+serde = { version = "1.0.151", features = ["derive"] }
+serde_derive = "1.0.151"
 serde_json = "1.0.91"
