--- a/rusty_cards/game/Cargo.toml
+++ b/rusty_cards/game/Cargo.toml
@@ -1,13 +1,11 @@
 [package]
-name = "client"
+name = "game"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-rusty_cards = { path = "../" }
-game = { path = "../game" }
+rand = "0.8.5"
 serde = { version = "1.0.151", features = ["derive"] }
 serde_json = "1.0.91"
-nom = "7.1.3"
