Resolving comments giveon on 1st part of the project

--- a/rusty_cards/Cargo.toml
+++ b/rusty_cards/Cargo.toml
@@ -7,4 +7,5 @@ edition = "2021"
 
 [dependencies]
 game = { path = "./game" }
+log = "0.4.17"
 serde = { version = "1.0.151", features = ["derive"] }
