--- a/rusty_cards/client/Cargo.toml
+++ b/rusty_cards/client/Cargo.toml
@@ -11,3 +11,4 @@ game = { path = "../game" }
 serde = { version = "1.0.151", features = ["derive"] }
 serde_json = "1.0.91"
 nom = "7.1.3"
+log = "0.4.17"
