--- a/rusty_cards/server/Cargo.toml
+++ b/rusty_cards/server/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 game = { path = "../game" }
+log = "0.4.17"
 rusty_cards = { path = "../" }
 serde = { version = "1.0.151", features = ["derive"] }
 serde_json = "1.0.91"
